# minecraft-bot

./: Cargo.toml  launch.sh
minecraft-bot-macros/: Cargo.toml
minecraft-bot-macros/src/: arguments.rs  code_modifier.rs  code_modifiers.rs  lib.rs  mission_state.rs
minecraft-bot-macros/tests/: loop_return.rs  main.rs  mt_functions.rs
src/: bot.rs  entities.rs  inventory.rs  main.rs  map.rs  network.rs  pathfinder.rs
src/missions/: crafting.rs  dig_down.rs  inventory.rs  mod.rs  settlement.rs  travel.rs  wood_cutting.rs
src/missions/submissions/: mod.rs
