[package]
name = "minecraft-bot-macros"
version = "0.1.0"
authors = ["Mubelotix <mubelotix@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = {version="1.0", features=["full", "extra-traits"]}
quote = "1.0"
proc-macro2 = "1.0"
convert_case = "0.4"
proc-macro2-diagnostics = "0.9"
